# iray_thermal_ros

./: CMakeLists.txt  README.md  main.cpp  package.xml
include/: DwEncoderCtrl.h
include/linux/: serialport.cpp  v4l2core.c  v4l2core.h
libs/: libUSBSDK.so.1
